--- a/index.html
+++ b/index.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liz RZ Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
 
-<!-- Header -->
-<header>
-    <img class="float-left" src ="./assets/images/LizRZAvatar.jpg" alt="Photo of Liz RZ">
-    
+    <!-- Header -->
+    <header>
+        <img class="float-left" src="./assets/images/LizRZAvatar.jpg" alt="Photo of Liz RZ">
 
-<!-- Navigation Links -->
-<nav>
-    <h1>Liz RZ Portfolio</h1>
-    <ul>
-        <li> <a href="#AboutMe">About Me</a></li>
-        <li> <a href="#MyWork">My Work</a></li>
-        <li> <a href="#ContactMe">Contact Me</a></li>
-    </ul>
-</nav>
-</header>
 
-<!-- About Me Section -->
-<section id="AboutMe">
-    <h2>About Me</h2>
-    <p class="aboutme">Welcome to my portfolio. I like to build things! I was once an apprentice carpenter, which taught me to build things IRL. Now I'm learning coding so I can build things, well, here, on the internet.</p>
-</section>
+        <!-- Navigation Links -->
+        <nav>
+            <h1>Liz RZ Portfolio</h1>
+            <ul>
+                <li> <a href="#AboutMe">About Me</a></li>
+                <li> <a href="#MyWork">My Work</a></li>
+                <li> <a href="#ContactMe">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<!-- My Work Section -->
+    <!-- About Me Section -->
+    <section id="AboutMe">
+        <h2>About Me</h2>
+        <p class="aboutme">Welcome to my portfolio. I like to build things! I was once an apprentice carpenter, which
+            taught me to build things IRL. Now I'm learning coding so I can build things, well, here, on the internet.
+        </p>
+    </section>
 
-<!-- Feature project section -->
-<section id="MyWork">
-    <h2>My Work</h2>
-    <div class="feature-project">
-        <h3><a href="https://lizranzim.github.io/Horiseon-Landing-Page/">Horiseon Website</a></h3>
-    
-    <a href="https://lizranzim.github.io/Horiseon-Landing-Page/"> <img class="float-left-mywork" src ="./assets/images/digital-marketing-meeting.jpg" alt="Group of people working around a table"></a>
-    </div>
-</section>
+    <!-- My Work Section -->
 
-<!-- Standard project section -->
-<section class="row">
-    <div class="standard-project">
-    <h3>Learning Javascript</h3>
-    <p> (This text and image is a placeholder until I complete more projects).</p>
-    <img class="float-left-mywork" src ="./assets/images/Javascript.JPG" alt="Screenshot of Javascript Tutorial from w3 schools web project">
-    </div>
+    <!-- Feature project section -->
+    <section id="MyWork">
+        <h2>My Work</h2>
+        <div class="feature-project">
+            <h3><a href="https://lizranzim.github.io/Horiseon-Landing-Page/">Horiseon Website</a></h3>
 
-    <div class="standard-project">
-        <h3>Learning React </h3>
-        <p> (This text and image is a placeholder until I complete more projects).</p>
-        <img class="float-left-mywork" src ="./assets/images/React.JPG" alt="Screenshot of React Tutorial from w3 schools web project">
+            <a href="https://lizranzim.github.io/Horiseon-Landing-Page/"> <img class="float-left-mywork"
+                    src="./assets/images/digital-marketing-meeting.jpg"
+                    alt="Group of people working around a table"></a>
         </div>
     </section>
 
-   <!-- Contact me section (fake phone number and email address are intentional) -->
+    <!-- Standard project section -->
+    <section class="row">
+        <div class="standard-project">
+            <h3>Learning Javascript</h3>
+            <p> (This text and image is a placeholder until I complete more projects).</p>
+            <img class="float-left-mywork" src="./assets/images/Javascript.JPG"
+                alt="Screenshot of Javascript Tutorial from w3 schools web project">
+        </div>
+
+        <div class="standard-project">
+            <h3>Learning React </h3>
+            <p> (This text and image is a placeholder until I complete more projects).</p>
+            <img class="float-left-mywork" src="./assets/images/React.JPG"
+                alt="Screenshot of React Tutorial from w3 schools web project">
+        </div>
+    </section>
+
+    <!-- Contact me section (fake phone number and email address are intentional) -->
     <div class="contact-me" id="ContactMe">
         <h2>Contact Me:</h2>
         <ul>
@@ -68,12 +75,13 @@
             <li> <strong>Github:</strong> <a href=https://github.com/LizRanZim>LizRZ </a></li>
         </ul>
     </div>
-   
 
-<!-- Footer section -->
+
+    <!-- Footer section -->
     <footer>
         <h5>Made with <span role="img" aria-label="heart">❤️</span> and CSS</h5>
-      </footer>
+    </footer>
 
 </body>
+
 </html>
