Updated Portfolio to include Javascript Project

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <section class="row">
         <div class="standard-project">
             <h3>Learning Javascript</h3>
-            <p> (This text and image is a placeholder until I complete more projects).</p>
-            <img class="float-left-mywork" src="./assets/images/Javascript.JPG"
-                alt="Screenshot of Javascript Tutorial from w3 schools web project">
+            <p> We created the Star Wars Trivia Crawl Game using Javascript.</p>
+            <img class="float-left-mywork" src="assets/images/StarWarsPlanetCrawlApp.gif"
+                alt="Animated .Gif of Star Wars Planet Crawl App">
         </div>
 
         <div class="standard-project">
