Updated file path to new .gif

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="standard-project">
             <h3>Learning Javascript</h3>
             <p> We created the Star Wars Trivia Crawl Game using Javascript.</p>
-            <img class="float-left-mywork" src="assets/images/StarWarsPlanetCrawlApp.gif"
+            <img class="float-left-mywork" src="./assets/images/StarWarsPlanetCrawlApp.gif"
                 alt="Animated .Gif of Star Wars Planet Crawl App">
         </div>
 
