Updated name of game

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="row">
         <div class="standard-project">
             <h3>Learning Javascript</h3>
-            <p> We created the Star Wars Trivia Crawl Game using Javascript.</p>
+            <p> We created the Star Wars Planet Crawl Game using Javascript.</p>
             <img class="float-left-mywork" src="./assets/images/StarWarsPlanetCrawlApp.gif"
                 alt="Animated .Gif of Star Wars Planet Crawl App">
         </div>
