Updated portfolio for latest project

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         </div>
 
         <div class="standard-project">
-            <h3>Learning React </h3>
-            <p> (This text and image is a placeholder until I complete more projects).</p>
-            <img class="float-left-mywork" src="./assets/images/React.JPG"
-                alt="Screenshot of React Tutorial from w3 schools web project">
+            <h3>Learning MVC Framework </h3>
+            <p> We created the <a href="https://serene-plateau-74924.herokuapp.com/">NewsHound</a> app to gather news from a variety of RSS feeds and display it.</p>
+            <img class="float-left-mywork" src="./assets/images/NewsHound.GIF"
+                alt="Screenshot of the NewsHound App">
         </div>
     </section>
 
